--- a/blackjack.cbp
+++ b/blackjack.cbp
@@ -34,12 +34,12 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-Wall" />
 			<Add option="-pipe" />
 			<Add option="-mthreads" />
 			<Add option="-D__GNUWIN32__" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-DwxUSE_UNICODE" />
-			<Add option="-Wall" />
 			<Add directory="$(#wx)/include" />
 		</Compiler>
 		<ResourceCompiler>
@@ -64,7 +64,14 @@
 			<Add library="liboleacc.a" />
 			<Add library="libuxtheme.a" />
 			<Add library="libimm32.a" />
+			<Add library="winmm" />
 		</Linker>
+		<Unit filename="GraDialog.cpp" />
+		<Unit filename="GraDialog.h" />
+		<Unit filename="StawkaDialog.cpp" />
+		<Unit filename="StawkaDialog.h" />
+		<Unit filename="WynikDialog.cpp" />
+		<Unit filename="WynikDialog.h" />
 		<Unit filename="blackjackApp.cpp" />
 		<Unit filename="blackjackApp.h" />
 		<Unit filename="blackjackMain.cpp" />
@@ -72,12 +79,18 @@
 		<Unit filename="resource.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
+		<Unit filename="wxsmith/GraDialog.wxs" />
+		<Unit filename="wxsmith/StawkaDialog.wxs" />
+		<Unit filename="wxsmith/WynikDialog1.wxs" />
 		<Unit filename="wxsmith/blackjackdialog.wxs" />
 		<Extensions>
 			<wxsmith version="1">
 				<gui name="wxWidgets" src="blackjackApp.cpp" main="blackjackDialog" init_handlers="necessary" language="CPP" />
 				<resources>
 					<wxDialog wxs="wxsmith/blackjackdialog.wxs" src="blackjackMain.cpp" hdr="blackjackMain.h" fwddecl="0" i18n="1" name="blackjackDialog" language="CPP" />
+					<wxDialog wxs="wxsmith/StawkaDialog.wxs" src="StawkaDialog.cpp" hdr="StawkaDialog.h" fwddecl="0" i18n="1" name="StawkaDialog" language="CPP" />
+					<wxDialog wxs="wxsmith/GraDialog.wxs" src="GraDialog.cpp" hdr="GraDialog.h" fwddecl="0" i18n="1" name="GraDialog" language="CPP" />
+					<wxDialog wxs="wxsmith/WynikDialog1.wxs" src="WynikDialog.cpp" hdr="WynikDialog.h" fwddecl="0" i18n="1" name="WynikDialog" language="CPP" />
 				</resources>
 			</wxsmith>
 		</Extensions>
